# switchover-agent

./: .gitignore  AGENTS.md  COMPLIANCE.yaml  Dockerfile  Dockerfile.mock  README.md  config.py  docker-compose.yml  logic.py  pyproject.toml
.github/workflows/: dev.yml  main.yml  test.yml
clients/: maintenance.py  prom.py
local/baseline/: activity_a.json  activity_p.json
local/kube/active/: config
local/kube/passive/: config
local/tls/: rootCA.crt  rootCA.key  rootCA.srl  switchover-peer.crt  switchover-peer.csr  switchover-peer.key
mock/: config.py  main.py  mask.py
mock/data/: phases.py
mock/data/dns/: active.json  passive.json
mock/data/k8s/: configmaps-active-passive.json  configmaps-gold-standby-partial.json  configmaps-gold-standby.json  configmaps-golddr-primary.json  configmaps-transition-active-passive.json  configmaps-transition-gold-standby.json  configmaps-transition-golddr-primary.json  configmaps.json  pipelineruns-cancelled.json  pipelineruns-completed.json  pipelineruns-failed.json  pipelineruns-running.json  pipelineruns.json  services.json  (+3 more)
peers/: client.py  client_fwd.py  server.py
src/: config.py  is_enabled.py  logic.py  main.py
src/clients/: dns.py  keycloak.py  kube.py  kube_stream.py  patroni.py  tekton.py  tick.py
src/tests/: patroni-cluster.json  patroni-standby.json
src/transitions/: initiate_down.py  initiate_maintenance.py  initiate_primary.py  initiate_standby.py  retry.py  shared.py  wait_for.py
tests/: conftest.py  patroni-config.json  patroni-s.json  test_pipeline_retry.py  test_untracked_env_success.py
(+11 files in other folders)
