[tool.poetry]
name = "switchover-agent"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
kubernetes = "^18.20.0"
websockets = "10.0"
prometheus-client = "0.12.0"
python-dotenv = "0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
